--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -1,10 +1,10 @@
 ---
 import { formatDate } from '../js/utils';
 
-const lightGlow = '#33D74C';
+const lightGlow = '#ff0080';
 const darkGlow = '#0000FF';
-const darkBg = '#2f2f33';
-const lightBg = 'rgb(250, 250, 250)';
+const darkBg = '#222';
+const lightBg = '#fff';
 const { date, href, title, description, last } = Astro.props;
 ---
 
