--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -20,9 +20,9 @@ const { emoji, string, type } = Astro.props;
   }
 
   .tech {
-    background: #151e36;
-    color: #bedbfe;
-    border: 1px solid #bedbfe;
+    /* background: #151e36; */
+    color: #0070f3;
+    border: 1px solid #0070f3;
   }
 
   .emoji {
