minor style changes, phished desc

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -121,8 +121,12 @@ blockquote {
   font-style: italic;
 }
 
+blockquote {
+  font-size: 1rem;
+}
+
 ::selection {
-  color: var(--bg-color);
+  color: white;
   background: var(--primary-color);
 }
 
@@ -167,11 +171,6 @@ p code {
   p,
   a {
     font-size: var(--size-400);
-  }
-
-  blockquote p {
-    font-size: var(--size-500);
-    max-width: 40ch;
   }
 
   hr {
