--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,19 +10,19 @@ const darkGlow = '#0000FF';
     <h3 class="title">
       {title}
       <svg
-        class="arrow"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="3"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        ><line x1="5" y1="12" x2="19" y2="12"></line><polyline
-          points="12 5 19 12 12 19"></polyline>
-      </svg>
+          class="arrow"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="3"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          ><line x1="5" y1="12" x2="19" y2="12"></line><polyline
+            points="12 5 19 12 12 19"></polyline>
+        </svg>
     </h3>
     <p>{desc}</p>
   </div>
@@ -33,6 +33,7 @@ const darkGlow = '#0000FF';
     cursor: pointer;
     padding: 1rem;
     height: 100%;
+
 
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
@@ -114,9 +115,11 @@ const darkGlow = '#0000FF';
     position: relative;
   }
 
-  .title-wrapper {
-    display: flex;
-    align-items: baseline;
+  /* For when arrow breaks to next line without the last word */
+  @media only screen and (max-width: 500px) and (min-width: 460px) {
+    .title {
+      white-space: nowrap;
+    }
   }
 
   .arrow {
@@ -129,6 +132,7 @@ const darkGlow = '#0000FF';
   .card:hover .arrow {
     opacity: 1;
   }
+
 
   @media (min-width: 40rem) {
     .card {
