fix phished desc, undo arrow line break

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -116,11 +116,11 @@ const darkGlow = '#0000FF';
   }
 
   /* For when arrow breaks to next line without the last word */
-  @media only screen and (max-width: 500px) and (min-width: 460px) {
+  /* @media only screen and (max-width: 500px) and (min-width: 460px) {
     .title {
       white-space: nowrap;
     }
-  }
+  } */
 
   .arrow {
     margin-left: 0.5rem;
