--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@
 body {
   background: var(--bg-color);
   color: var(--text-color);
-  padding: 2rem 1rem;
+  padding: 2rem 0;
   font-family: 'Inter', sans-serif;
 }
 
