prefetch phished article

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ const lightGlow = '#ff0080';
 const darkGlow = '#0000FF';
 ---
 
-<a href={`/posts/${href}/`}>
+<a href={`/posts/${href}/`} rel="prefetch">
   <div class="card">
     <img src={src} alt={alt} />
     <h3 class="title">
