--- a/src/styles/CopyButton.module.css
+++ b/src/styles/CopyButton.module.css
@@ -2,9 +2,17 @@ button {
   border-radius: 8px;
   padding: 0.75rem;
   font-weight: bold;
-  background: #ffffff;
+  background: white;
   border: none;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+  box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
+        100%, 0.075),
+      /* shadow ring 👇 */
+      0 0 0 1px hsla(0, 0%, 0%, 0.05),
+      /* multiple soft shadows 👇 */
+      0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
+      0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
+      0 3.5px 6px hsla(0, 0%, 0%, 0.09);
   transition: 0.2s;
   color: black;
   transform: scale(1);
@@ -18,9 +26,20 @@ button:hover {
 
 button:active {
   transform: scale(0.97);
-  background: dodgerblue;
 }
 
 button:focus {
   background: #ffffff;
+}
+
+:global(.dark) button {
+  background: #222222;
+  color: white;
+  box-shadow: inset 0 0 0.5px 1px hsla(0, 0%, 100%, 0.1),
+      /* 2. shadow ring 👇 */
+      0 0 0 1px hsla(230, 13%, 9%, 0.075),
+      /* 3. multiple soft shadows 👇 */
+      0 0.3px 0.4px hsla(230, 13%, 9%, 0.02),
+      0 0.9px 1.5px hsla(230, 13%, 9%, 0.045),
+      0 3.5px 6px hsla(230, 13%, 9%, 0.09);
 }
