--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -123,10 +123,11 @@ const darkGlow = '#0000FF';
   } */
 
   .arrow {
-    margin-left: 0.5rem;
     opacity: 0;
     transition: 0.2s ease-in-out;
     position: relative;
+    top: 0.125rem;
+    left: 0.25rem;
   }
 
   .card:hover .arrow {
