--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,6 +171,7 @@ const darkModeGradient = 'linear-gradient(90deg, #7928CA, #FF0080)'
   .more {
     text-align: left;
     margin-top: 4rem;
+    contain: style;
   }
 
   marquee {
