remove rss, add twitter link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,9 +9,8 @@ const blueLink = '#0000FF';
     <span class="links">
       <a href="https://github.com/boogerbuttcheeks">Github</a>
       <a href="https://www.linkedin.com/in/trevortylerlee/"
-        >LinkedIn</a
-      >
-      <a href="/rss.xml">RSS</a>
+        >LinkedIn</a>
+      <a href="https://twitter.com/boogerbuttcheek">Twitter</a>
     </span>
     <!-- The sprites are from pokedb.net!  -->
     <span class="pokemon">
