--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,6 +73,15 @@ const darkModeGradient = 'linear-gradient(90deg, #7928CA, #FF0080)'
           <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
         </a>
       </svg>
+      <svg
+         xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+        aria-describedby="twitter"
+      >
+        <title id="twitter">Link to Trevor's Twitter</title>
+        <a href="https://www.twitter.com/boogerbuttcheek/">
+          <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
+        </a>
+      </svg>
     </div>
   </div>
   <hr />
