--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const blueLink = '#0000FF';
       <a href="https://www.linkedin.com/in/trevortylerlee/"
         >LinkedIn</a
       >
-      <a href="/rss.xml">RSS</a>
+      <!-- <a href="/rss.xml">RSS</a> -->
     </span>
     <!-- The sprites are from pokedb.net!  -->
     <span class="pokemon">
