add twitter links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,7 @@ const blueLink = '#0000FF';
         >LinkedIn</a
       >
       <!-- <a href="/rss.xml">RSS</a> -->
+      <a href="https://twitter.com/boogerbuttcheek">Twitter</a>
     </span>
     <!-- The sprites are from pokedb.net!  -->
     <span class="pokemon">
