--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 
 /* Based on modularscale.com */
 :root {
@@ -27,7 +29,7 @@ body {
   background: var(--bg-color);
   color: var(--text-color);
   padding: 2rem 1rem;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
 .wrapper {
@@ -85,7 +87,7 @@ h3,
 h4 {
   line-height: 1.25;
   transition: 0.2s;
-  font-family: 'Unbounded', 'Inter', sans-serif
+  font-family: 'Inter', sans-serif
 }
 
 h1 {
