--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,11 +148,15 @@ const darkModeGradient = 'linear-gradient(90deg, #7928CA, #FF0080)'
     text-align: center;
   }
 
+  .desc {
+    margin-top: -0.5rem;
+  }
+
   .icons {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 1rem;
+    margin-top: 2rem;
     margin-bottom: 4rem;
     gap: 2rem;
   }
