--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@ const darkModeColor = '#ff0080';
 const lightModeColor = '#0000FF';
 ---
 
-<nav>
+<nav aria-label="Main Navigation">
   <a class="wavy-exempt" href="/" aria-label="Go to homepage">
     <Icon name="lucide:home" size="48" class="logo"/>
   </a>
