styling links, spacing, refactor latest posts

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -47,7 +47,7 @@ const blueLink = '#0000FF';
   }
 
   a:hover {
-    color: var(--blueLink);
+    /* color: var(--blueLink); */
   }
 
   :global(.dark) a {
@@ -55,7 +55,7 @@ const blueLink = '#0000FF';
   }
 
   :global(.dark) a:hover {
-    color: var(--greenLink);
+    /* color: var(--greenLink); */
   }
 
   .hr {
