--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -103,7 +103,7 @@ const { date, href, title, description, last } = Astro.props;
     width: 70%;
   }
 
-  .title p {
+  .title h4 {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
