--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -28,6 +28,7 @@ const { prevUrl, nextUrl } = Astro.props;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 4rem;
   }
 
   a {
