--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
 import Marquee from '../components/Marquee.astro';
 import MorePost from '../components/MorePost.astro';
+import LatestPosts from '../components/LatestPosts.astro';
 
 import { formatBlogPost } from '../js/utils';
 
@@ -18,9 +19,6 @@ const feature2 = await getEntryBySlug('posts', 'text2array');
 const feature3 = await getEntryBySlug('posts', 'design');
 const featuredPost = [feature1];
 const secondaryPosts = [feature2, feature3];
-
-const lightModeGradient = 'linear-gradient(90deg, #007CF0, #00DFD8)'
-const darkModeGradient = 'linear-gradient(90deg, #7928CA, #FF0080)'
 ---
 
 <BaseLayout pageTitle={pageTitle}>
@@ -117,6 +115,8 @@ const darkModeGradient = 'linear-gradient(90deg, #7928CA, #FF0080)'
   }
   </div>
   <hr />
+  <LatestPosts />
+  <!-- <div>
   <div class="latest-posts">
     <h2 class="more">Latest Posts</h2>
     <a class="view-all" href="/posts/">View all posts</a>
@@ -130,9 +130,10 @@ const darkModeGradient = 'linear-gradient(90deg, #7928CA, #FF0080)'
       />
     ))
   }
+  </div> -->
 </BaseLayout>
 
-<style define:vars={{lightModeGradient, darkModeGradient}}>
+<style>
   h1 {
     font-size: 3.125rem;
     cursor: default;
