--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,11 +1,40 @@
 ---
 ---
 
-<div>
-  <marquee id="marq" aria-hidden="true" scrolldelay="120" scrollamount="4">
+  <div class='container' aria-hidden="true">
+  <div id="marq" class='wrapper'>
     <img src="/pokemon/magikarp.gif" alt="magikarp" />
-  </marquee>
-</div>
+  </div>
+  </div>
+
+<style>
+  .container {
+    overflow-x: hidden;
+  }
+
+  .wrapper {
+    white-space: nowrap;
+    overflow: hidden;
+    position: relative;
+    animation: scroll 24s linear infinite;
+    width: 100%;
+    /* outline: 2px solid red; */
+  }
+  
+  .wrapper img {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  @keyframes scroll {
+    0% {
+      transform: translateX(110%);
+    }
+    100% {
+      transform: translateX(-25%);
+    }
+  }
+</style>
 
 <script>
   const possiblePokemon = {
@@ -42,3 +71,4 @@
   let marq = document.getElementById("marq");
   marq.innerHTML = `<img src=${`/pokemon/${pokemon}.gif`} alt=${`${pokemon}`} />`;
 </script>
+
