--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,10 +31,10 @@ const secondaryPosts = [feature2, feature3];
       <a class='wavy-exempt icon' href="https://github.com/boogerbuttcheeks">
         <Icon name="lucide:github" size="40" />
       </a>
-      <a class='wavy-exempt icon' href="https://github.com/boogerbuttcheeks">
+      <a class='wavy-exempt icon' href="https://www.linkedin.com/in/trevortylerlee/">
         <Icon name="lucide:linkedin" size="40" />
       </a>
-      <a class='wavy-exempt icon' href="https://github.com/boogerbuttcheeks">
+      <a class='wavy-exempt icon' href="https://twitter.com/boogerbuttcheek">
         <Icon name="lucide:twitter" size="40" />
       </a>
       <!-- <svg
