--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@ const lightModeColor = '#0000FF';
 
 <nav aria-label="Main Navigation">
   <a class="wavy-exempt" href="/" aria-label="Go to homepage">
-    <Icon name="lucide:home" size="48" class="logo"/>
+    <Icon name="octicon:home-fill-24" size="48" class="logo"/>
   </a>
   <ThemeIcon />
 </nav>
