--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,76 +28,15 @@ const secondaryPosts = [feature2, feature3];
     <h1 class="name">Trevor Lee</h1>
     <p class="desc">Digital designer and web developer</p>
     <div class="icons">
-      <a class='wavy-exempt icon' href="https://github.com/boogerbuttcheeks">
-        <Icon name="lucide:github" size="40" />
+      <a class='wavy-exempt icon' href="https://github.com/boogerbuttcheeks" aria-label="Go to Trevor's Github page">
+        <Icon name="ant-design:github-filled" size="40" />
       </a>
-      <a class='wavy-exempt icon' href="https://www.linkedin.com/in/trevortylerlee/">
-        <Icon name="lucide:linkedin" size="40" />
+      <a class='wavy-exempt icon' href="https://www.linkedin.com/in/trevortylerlee/" aria-label="Go to Trevor's LinkedIn page">
+        <Icon name="ri:linkedin-fill" size="40" />
       </a>
-      <a class='wavy-exempt icon' href="https://twitter.com/boogerbuttcheek">
-        <Icon name="lucide:twitter" size="40" />
+      <a class='wavy-exempt icon' href="https://twitter.com/boogerbuttcheek" aria-label="Go to Trevor's Twitter page">
+        <Icon name="ri:twitter-fill" size="40" />
       </a>
-      <!-- <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="40"
-        height="40"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        aria-describedby="github"
-      >
-        <title id="github">Link to Trevor's Github</title>
-        <a href="https://github.com/boogerbuttcheeks">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
-          ></path>
-        </a>
-      </svg> -->
-      <!-- <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="40"
-        height="40"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        aria-describedby="linkedin"
-      >
-        <title id="linkedin">Link to Trevor's LinkedIn</title>
-        <a href="https://www.linkedin.com/in/trevortylerlee/">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
-          ></path>
-          <path d="M8 11l0 5"></path>
-          <path d="M8 8l0 .01"></path>
-          <path d="M12 16l0 -5"></path>
-          <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
-        </a>
-      </svg> -->
-      <!-- <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="40"
-        height="40"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        aria-describedby="linkedin"
-      >
-        <title id="linkedin">Link to Trevor's LinkedIn</title>
-        <a href="https://www.twitter.com/boogerbuttcheek/">
-          <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
-        </a>
-      </svg> -->
     </div>
   </div>
   <hr />
@@ -184,7 +123,6 @@ const secondaryPosts = [feature2, feature3];
   }
 
   svg {
-    stroke: var(--text-color);
     transition: 0.2s;
   }
 
@@ -193,7 +131,6 @@ const secondaryPosts = [feature2, feature3];
   svg:focus-visible,
   svg:focus-within,
   svg:active {
-    stroke: var(--primary-color);
     transform: scale(1.02);
   }
 
