--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const { pageTitle } = Astro.props;
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta property="og:image" content="https://www.trevortylerlee.com/">
+    <meta property="og:image" content="/og.jpg">
     <meta
       name="description"
       content="Trevor Lee | Web Developer from Vancouver, Canada | TypeScript, React, Next.js, Node.js"
