reorganize files in public

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,16 +17,16 @@ const blueLink = '#0000FF';
     <!-- The sprites are from pokedb.net!  -->
     <span class="pokemon">
       <span class="ditto name">
-        <img src="/ditto.gif" alt="Ditto" />
+        <img src="/pokemon/ditto.gif" alt="Ditto" />
       </span>
       <span class="togepi name">
-        <img src="/togepi.gif" alt="Togepi" />
+        <img src="/pokemon/togepi.gif" alt="Togepi" />
       </span>
       <span class="pichu name">
-        <img class="delete" src="/pichu.gif" alt="Pichu" />
+        <img class="delete" src="/pokemon/pichu.gif" alt="Pichu" />
       </span>
       <span class="wooper name">
-        <img class="delete" src="/wooper.gif" alt="Wooper" />
+        <img class="delete" src="/pokemon/wooper.gif" alt="Wooper" />
       </span>
     </span>
   </div>
