name glitch, remove contact colors

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -21,7 +21,6 @@ import CopyButton from '../components/CopyButton';
   }
 
   .color {
-    cursor: default;
     margin-top: 2rem;
   }
 
@@ -38,7 +37,7 @@ import CopyButton from '../components/CopyButton';
     opacity: 0.25;
   }
 
-  @media (prefers-reduced-motion: no-preference) {
+  /* @media (prefers-reduced-motion: no-preference) {
     .color:hover {
       background-image: linear-gradient(
         140deg,
@@ -93,5 +92,5 @@ import CopyButton from '../components/CopyButton';
         background-position: 0% 100%;
       }
     }
-  }
+  } */
 </style>
